--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,5 +1,29 @@
 {
+    "version": "2.0.0",
     "tasks": [
+        {
+            "label": "build",
+            "type": "shell",
+            "command": "make",
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            },
+            "problemMatcher": [],
+            "detail": "生成目标可执行文件"
+        },
+        {
+            "label": "run",
+            "type": "shell",
+            "command": "./ls_program",
+            "dependsOn": "build",
+            "group": {
+                "kind": "test",
+                "isDefault": true
+            },
+            "problemMatcher": [],
+            "detail": "运行程序"
+        },
         {
             "type": "cppbuild",
             "label": "C/C++: gcc 生成活动文件",
@@ -23,6 +47,5 @@
             },
             "detail": "调试器生成的任务。"
         }
-    ],
-    "version": "2.0.0"
+    ]
 }
